# cloci

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  setup.py
archive/: hgx2gcfs.py  hgx2hlgs.py
cloci/: .og2clus.py.swp  cloci  main.py
cloci/archive/: dnds_calc.py  hg2hg_net.py
cloci/cloci.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cloci/lib/: evo_conco.py  generate_nulls.py  hgp2hgx.py  hgx2hlgs.py  input_parsing.py  output_data.py  treecalcs.py
cloci/tools/: cloci2annotate.py  cloci2enrich.py  cloci2stats.py  cloci2summary.py  hg2hg_net.py  hlg2biofile.py  hlg2heatmap.py  hlg2hlg_net.py
orthocluster/: .hg2clus.swp  .og2clus.py.swo  .og2clus.py.swp  clus2enrich.py  clus2net.py  hg2clus  og2clus.py
orthocluster/lib/: .evo_conco.py.swn  .evo_conco.py.swp  .hgx2gcfs.py.swk  .hgx2gcfs.py.swl  .hgx2gcfs.py.swm  .hgx2gcfs.py.swn  .hgx2gcfs.py.swo  dnds_calc.py  evo_conco.py  generate_nulls.py  hgp2hgx.py  hgpairs2hgx.py  hgx2gcfs.py  input_parsing.py  output_data.py  patchiness.py  phylocalcs.py  treecalcs.py
orthocluster/tools/: clan2net.py  clus2enrich.py  clus2percent.py  db2microsyntree.py
tools/: hg2hg_net.py
