[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cloci"
version = "0.01.7"
authors = [{name="Zachary Konkel", email="konkelzach@protonmail.com"}]
description = "Co-occurrence Locus and Orthologous Cluster Identifier"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = '>=3.0,<4'
dependencies = ['mycotools', 'cogent3', 'tqdm', 'plotly']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/xonq/cloci"
"Bug Tracker" = "https://github.com/xonq/cloci/issues"

[project.scripts]
cloci = "cloci.main:cli"
cloci2enrich = "cloci.tools.cloci2enrich:cli"
cloci2stats = "cloci.tools.cloci2stats:cli"
hg2hg_net = "cloci.tools.hg2hg_net:cli"
hlg2biofile = "cloci.tools.hlg2biofile:cli"
hlg2hlg_net = "cloci.tools.hlg2hlg_net:cli"


[tool.setuptools.packages.find]
include = ["cloci*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["dist*", "archive*", "etc*"]  # exclude packages matching these glob patterns (empty by default)
